# api_gateway/api/docs/swagger.yaml
@@ -1,4 +1,15 @@
 definitions:
+  book_service.Book:
+    properties:
+      author_id:
+        type: string
+      category_id:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   book_service.Category:
     properties:
       category_name:
@@ -13,10 +24,28 @@ definitions:
       lastName:
         type: string
     type: object
+  book_service.CreateBookRequest:
+    properties:
+      author_id:
+        type: string
+      category_id:
+        type: string
+      name:
+        type: string
+    type: object
   book_service.CreateCategoryRequest:
     properties:
       category_name:
         type: string
+    type: object
+  book_service.GetAllBookResponse:
+    properties:
+      books:
+        items:
+          $ref: '#/definitions/book_service.Book'
+        type: array
+      count:
+        type: integer
     type: object
   book_service.GetAllCategoryResponse:
     properties:
@@ -39,6 +68,17 @@ definitions:
     - first_name
     - last_name
     type: object
+  models.BookModel:
+    properties:
+      author_id:
+        type: string
+      category_id:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   models.Category:
     properties:
       category_name:
@@ -57,6 +97,15 @@ definitions:
     required:
     - first_name
     - last_name
+    type: object
+  models.CreateBookModel:
+    properties:
+      author_id:
+        type: string
+      category_id:
+        type: string
+      name:
+        type: string
     type: object
   models.CreateCategory:
     properties:
@@ -327,6 +376,242 @@ paths:
       summary: Update Author
       tags:
       - author
+  /v1/book:
+    get:
+      consumes:
+      - application/json
+      description: get book
+      operationId: get-book
+      parameters:
+      - description: search
+        in: query
+        name: search
+        type: string
+      - description: limit
+        in: query
+        name: limit
+        type: integer
+      - description: offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/book_service.GetAllBookResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: get book all
+      tags:
+      - book
+    post:
+      consumes:
+      - application/json
+      description: create book
+      operationId: create-books
+      parameters:
+      - description: book
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/book_service.CreateBookRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/book_service.Book'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: create book
+      tags:
+      - book
+  /v1/book/{book_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Book
+      operationId: delete-book
+      parameters:
+      - description: book_id
+        in: path
+        name: book_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Status'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: delete book
+      tags:
+      - book
+    get:
+      consumes:
+      - application/json
+      description: get book
+      operationId: get-book-byID
+      parameters:
+      - description: book_id
+        in: path
+        name: book_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.BookModel'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: get book by ID
+      tags:
+      - book
+    put:
+      consumes:
+      - application/json
+      description: Update Book by ID
+      operationId: update_book
+      parameters:
+      - description: book_id
+        in: path
+        name: book_id
+        required: true
+        type: string
+      - description: book
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateBookModel'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: desc
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.Status'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.ResponseModel'
+            - properties:
+                error:
+                  type: string
+              type: object
+      summary: Update Book
+      tags:
+      - book
   /v1/category:
     get:
       consumes:
